--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Zhaoming Yin"
   avatar           : "profile.png"
   bio              : "Big data, Graph analysis"
-  location         : "Location"
+  location         : "Hangzhou, San Francisco"
   employer         : "TRIAS Lab, Alibaba, Oracle"
   googlescholar    : "https://scholar.google.com/citations?user=p0_SxakAAAAJ&hl=en"
   email            :
