--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zhaoming Yin"
   avatar           : "profile.png"
-  bio              : "Block chain, Big data, Graph analysis"
+  bio              : "Block chain, Bioinformatics, Big data, Graph analysis"
   location         : "Hangzhou, San Francisco"
   employer         : "TRIAS Lab, Alibaba, Oracle"
   googlescholar    : "https://scholar.google.com/citations?user=p0_SxakAAAAJ&hl=en"
