--- a/_config.yml
+++ b/_config.yml
@@ -177,6 +177,10 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  patents:
+    output: true
+    permalink: /:collection/:path/
+
   portfolio:
     output: true
     permalink: /:collection/:path/
@@ -223,6 +227,16 @@ defaults:
       author_profile: true
       share: true
       comments: true
+# _patents
+  - scope:
+      path: ""
+      type: patents 
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+
   # _portfolio
   - scope:
       path: ""
