update personal page

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Block chain, Bioinformatics, Big data, Graph analysis"
   location         : "Hangzhou, San Francisco"
-  employer         : "Google, PayTM, TRIAS Lab, Alibaba, Oracle"
+  employer         : "Google<-Alibaba<-Oracle"
   googlescholar    : "https://scholar.google.com/citations?user=p0_SxakAAAAJ&hl=en"
   email            : "stplaydog@gmail.com"
   uri              :
